<resources>
    <string name="app_name">Terrarea</string>
    <string name="searchText">Search</string>
    <string name="save_location_dialog_title">New location</string>
    <string name="territory_list_title">Territories</string>
    <string name="territory_name">Name</string>
    <string name="territory_area">Area</string>
    <string name="territory_perimeter">Perimeter</string>
    <string name="error_territory_name">Enter territory name</string>
    <string name="save_location_dialog_action_save">Save</string>
    <string name="save_location_dialog_action_cancel">Cancel</string>
    <string name="drawer_territories">Territories</string>

    <string-array name="area_measurement_types">
        <item>ha</item>
        <item>a</item>
        <item>km²</item>
        <item>m²</item>
    </string-array>

    <string-array name="area_measurement_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="perimeter_measurement_types">
        <item>m</item>
        <item>km</item>
    </string-array>

    <string-array name="perimeter_measurement_types_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_group_general">General</string>
    <string name="drawer_group_user">User</string>
    <string name="drawer_sign_in">Sign in</string>
    <string name="settings_category_general">General settings</string>
    <string name="setting_store_location">Store locations locally</string>
    <string name="settings_category_territories">Territory settings</string>
    <string name="setting_store_area">Store territory area</string>
    <string name="setting_store_perimeter">Store territory perimeter</string>
    <string name="setting_area_type">Area measurement type</string>
    <string name="setting_area_type_summary">Default territory area measurement type</string>
    <string name="setting_perimeter_type">Perimeter measurement type</string>
    <string name="setting_perimeter_type_summary">Default territory perimeter measurement type</string>
    <string name="drawer_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_password_repeat">Repeat password</string>
    <string name="login_submit">Login</string>
    <string name="login_register">Register</string>
    <string name="register_title">Register</string>
    <string name="territory_item_area_text">Territory total area %.2f</string>
    <string name="territory_item_perimeter_text">Territory total perimeter %.2f</string>
    <string name="territory_item_area_not_saved">The area was not saved for this territory</string>
    <string name="territory_item_perimeter_not_saved">The perimeter was not saved for this territory</string>
    <string name="territory_list_empty">There are no stored territories</string>
    <string name="need_three_points">You need to mark at least 3 points to save location</string>
    <string name="territory_saved">Territory saved</string>
    <string name="empty_territory_name">Territory name is required</string>
    <string name="territory_validation">You must provide information</string>
    <string name="territory_removed">The territory %s was removed</string>
    <string name="territory_no_positions">The territory %s does not have stored positions</string>
    <string name="territory_updated">The territory was updated</string>
</resources>
