<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:elevation="24dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_territory_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_territory_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/territory_name"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_territory_area"
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_territory_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="@string/territory_area"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="match_parent">

            <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/spinner_territory_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"
                android:entries="@array/area_measurement_types"
                android:layout_marginBottom="2.5dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_territory_perimeter"
            android:layout_width="0dp"
            android:layout_weight=".70"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_territory_perimeter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:hint="@string/territory_perimeter"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight=".30"
            android:layout_height="match_parent">

            <Spinner
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:id="@+id/spinner_territory_perimeter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/perimeter_measurement_types"
                android:layout_marginBottom="2.5dp"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</LinearLayout>